--- a/profile-driver.html
+++ b/profile-driver.html
@@ -288,7 +288,7 @@
                                     <i class="fa-solid fa-car img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption show d-none d-md-block mt-3">
+                                <div class="carousel-caption shows d-none d-md-block mt-3">
                                     <p class="my-address">Choose your ride</p>
 
                                     <p class="words-ride">Select from a wide range of options and get your ride within
@@ -302,7 +302,7 @@
                                     <i class="fa-solid fa-mobile-screen-button img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows d-none d-md-block  mt-3">
                                     <p class="my-address">Track your ride</p>
 
                                     <p class="words-ride">Track your ride in real time from the moment a Captain is
@@ -316,7 +316,7 @@
                                     <i class="fa-solid fa-credit-card img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows d-none d-md-block  mt-3">
                                     <p class="my-address">Pay securely</p>
 
                                     <p class="words-ride">Card, Careem Pay, Apple Pay or cash; you can pay securely on
@@ -330,7 +330,7 @@
                                     <i class="fa-solid fa-rotate-left img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows d-none d-md-block  mt-3">
                                     <p class="my-address">Return</p>
 
                                     <p class="words-ride">Dock your bike at any Careem BIKE station; wait for the green
@@ -344,7 +344,7 @@
                                     <i class="fa-solid fa-bicycle img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows d-none d-md-block  mt-3">
                                     <p class="my-address">Unlock and ride</p>
 
                                     <p class="words-ride">Download the Careem app, select Bike, and find a station.
@@ -358,7 +358,7 @@
                                     <i class="fa-solid fa-percent img-profile"></i>
                                 </div>
 
-                                <div class="carousel-caption show d-none d-md-block  mt-3">
+                                <div class="carousel-caption shows d-none d-md-block  mt-3">
                                     <p class="my-address">Save up to 40%</p>
 
                                     <p class="words-ride">Extra savings with no peak charges and regulator fees on
