--- a/index after login.html
+++ b/index after login.html
@@ -18,13 +18,13 @@
     <title>Index-After-Login</title>
 </head>
 
-<body>
+<body id="GFG">
 
     <div class="container-fluid" id="container-fluid">
 
         <ul class="navbar-nav me-auto mb-2 flex-new">
 
-            <div class=" navbar-collapse" id="navbarSupported">
+            <div class=" navbar-collapse width" id="navbarSupported">
 
                 <li class="nav-item  width">
 
@@ -90,6 +90,12 @@
 
             </li>
 
+            <li class="nav-item dropdown width-Click">
+                <button onclick="myFunc()">
+                    Click here
+                </button>
+            </li>
+
         </ul>
 
     </div>
@@ -99,7 +105,7 @@
         <div class="container-floid container-fluid">
 
             <a class="navbar-brand link-logo-new" href="index.html">
-                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo" >
+                <img src="img/steering-wheel-icon.svg" alt="" class="vector-img-logo">
                 <img src="img/logo-nobackground.png" class="background-img-logo" alt="Vector">
             </a>
 
@@ -1347,6 +1353,16 @@
                 header.classList.remove('stickyTop');
             }
         });
+
+        let result = document.getElementById("GFG");
+
+        function changeColor(color) {
+            document.body.style.background = color;
+        }
+
+        function myFunc() {
+            changeColor('black');
+        }
     </script>
 
     <script>
