--- a/Models-Cars.html
+++ b/Models-Cars.html
@@ -21,7 +21,7 @@
 
         <ul class="navbar-nav me-auto mb-2 flex-new">
 
-            <div class=" navbar-collapse" id="navbarSupported">
+            <div class=" navbar-collapse width" id="navbarSupported">
 
                 <li class="nav-item  width">
 
@@ -53,6 +53,12 @@
             <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
                 <button class="btn  button-post" type="submit">+post</button>
             </form>
+
+            <li class="nav-item dropdown width-Click">
+                <button onclick="myFunction()">
+                    Click here
+                </button>
+            </li>
 
         </ul>
 
@@ -926,122 +932,10 @@
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
 
+    <script src="js/java.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
-
-    <script>
-
-        var myButton = document.getElementById("gototop");
-        window.onscroll = function () { scrollFunction(); };
-        function scrollFunction() {
-            if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 20) {
-                myButton.style.display = "block";
-            } else {
-                myButton.style.display = "none";
-            }
-        }
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-            myButton.style.transition = '3s';
-        }
-
-        document.addEventListener('scroll', () => {
-            const header = document.querySelector('.navbar');
-            if (window.scrollY > 0) {
-                header.classList.add('stickyTop');
-            } else {
-                header.classList.remove('stickyTop');
-            }
-        });
-    </script>
-
-    <script src="js/date-picker.js"></script>
-
-    <script>
-
-        let customSelects = document.getElementsByClassName("custom-select");
-        let totalCustomSelects = customSelects.length;
-        for (let i = 0; i < totalCustomSelects; i++) {
-            let selectElement = customSelects[i].getElementsByTagName("select")[0];
-            let options = selectElement.getElementsByTagName("option");
-            let totalOptions = options.length;
-
-            let selectedDiv = document.createElement("DIV");
-            selectedDiv.setAttribute("class", "select-selected");
-            selectedDiv.innerHTML = options[selectElement.selectedIndex].innerHTML;
-            customSelects[i].appendChild(selectedDiv);
-
-            let optionsDiv = document.createElement("DIV");
-            optionsDiv.setAttribute("class", "select-items select-hide");
-
-            for (let j = 1; j < totalOptions; j++) {
-                let optionDiv = document.createElement("DIV");
-                optionDiv.innerHTML = options[j].innerHTML;
-                optionDiv.addEventListener("click", function (e) {
-                    let s = this.parentNode.parentNode.getElementsByTagName("select")[0];
-                    let sl = s.length;
-
-                    for (let k = 0; k < sl; k++) {
-                        if (s.options[k].innerHTML === this.innerHTML) {
-                            s.selectedIndex = k;
-                            selectedDiv.innerHTML = this.innerHTML;
-
-                            let selectedItems = this.parentNode.getElementsByClassName("same-as-selected");
-                            let totalSelectedItems = selectedItems.length;
-
-                            for (let m = 0; m < totalSelectedItems; m++) {
-                                selectedItems[m].removeAttribute("class");
-                            }
-
-                            this.setAttribute("class", "same-as-selected");
-                            break;
-                        }
-                    }
-
-                    selectedDiv.click();
-                });
-
-                optionsDiv.appendChild(optionDiv);
-            }
-
-            customSelects[i].appendChild(optionsDiv);
-
-            selectedDiv.addEventListener("click", function (e) {
-                e.stopPropagation();
-                closeAllSelect(this);
-                this.nextSibling.classList.toggle("select-hide");
-                this.classList.toggle("select-arrow-active");
-            });
-        }
-
-        function closeAllSelect(elmnt) {
-            let x = document.getElementsByClassName("select-items");
-            let y = document.getElementsByClassName("select-selected");
-            let xl = x.length;
-            let yl = y.length;
-            let arrNo = [];
-
-            for (let i = 0; i < yl; i++) {
-                if (elmnt === y[i]) {
-                    arrNo.push(i)
-                } else {
-                    y[i].classList.remove("select-arrow-active");
-                }
-            }
-
-            for (let i = 0; i < xl; i++) {
-                if (arrNo.indexOf(i)) {
-                    x[i].classList.add("select-hide");
-                }
-            }
-        }
-
-        document.addEventListener("click", closeAllSelect);
-    </script>
-
-   
 
 </body>
 
