--- a/form-driver.html
+++ b/form-driver.html
@@ -21,7 +21,7 @@
 
         <ul class="navbar-nav me-auto mb-2 flex-new">
 
-            <div class=" navbar-collapse" id="navbarSupported">
+            <div class=" navbar-collapse width" id="navbarSupported">
 
                 <li class="nav-item  width">
 
@@ -53,6 +53,12 @@
             <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
                 <button class="btn  button-post" type="submit">+post</button>
             </form>
+
+            <li class="nav-item dropdown width-Click">
+                <button onclick="myFunction()">
+                    Click here
+                </button>
+            </li>
 
         </ul>
 
@@ -467,7 +473,7 @@
 
     </div>
 
-    <footer class=" footer-bootstrap-v5 mt-5">
+    <footer  class=" footer-bootstrap-v5 mt-5">
 
         <div class="row ms-0 me-0">
 
@@ -569,79 +575,10 @@
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
 
+    <script src="js/java.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
-
-    <script>
-
-        var myButton = document.getElementById("gototop");
-        window.onscroll = function () { scrollFunction(); };
-        function scrollFunction() {
-            if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 20) {
-                myButton.style.display = "block";
-            } else {
-                myButton.style.display = "none";
-            }
-        }
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-            myButton.style.transition = '3s';
-        }
-
-        document.addEventListener('scroll', () => {
-            const header = document.querySelector('.navbar');
-            if (window.scrollY > 0) {
-                header.classList.add('stickyTop');
-            } else {
-                header.classList.remove('stickyTop');
-            }
-        });
-    </script>
-
-    <script>
-        const multiStepFrom = document.querySelector("[data-multi-step]");
-        const formSteps = [...multiStepFrom.querySelectorAll("[data-step]")];
-
-        let NextStep = formSteps.findIndex(step => {
-            return step.classList.contains("active")
-        })
-
-        if (NextStep < 0) {
-            NextStep = 0;
-            showNextStep();
-        }
-
-        multiStepFrom.addEventListener("click", go => {
-            let checkValio;
-            if (go.target.matches("[data-next]")) {
-                checkValio = 1;
-            } else if (go.target.matches("[data-Previous]")) {
-                checkValio = -1;
-            }
-
-            if (checkValio == null) return
-
-            const inputs = [...formSteps[NextStep].querySelectorAll("input")];
-            console.log("her")
-            const allValio = inputs.every(input => input.checkValidity());
-            if (allValio) {
-                NextStep += checkValio;
-                showNextStep();
-            }
-        })
-
-        function showNextStep() {
-            formSteps.forEach((step, index) => {
-                step.classList.toggle("active", index === NextStep)
-            })
-        }
-
-        console.log(NextStep);
-    </script>
-
-    <script src="js/date-picker.js"></script>
 
 </body>
 
