--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <ul class="navbar-nav me-auto mb-2 flex-new">
 
-            <div class=" navbar-collapse" id="navbarSupported">
+            <div class=" navbar-collapse width" id="navbarSupported">
 
                 <li class="nav-item  width">
 
@@ -56,6 +56,12 @@
             <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
                 <button class="btn  button-post" type="submit">+post</button>
             </form>
+
+            <li class="nav-item dropdown width-Click">
+                <button onclick="myFunction()">
+                    Click here
+                </button>
+            </li>
 
         </ul>
 
@@ -1244,86 +1250,11 @@
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
 
+    <script src="js/java.js"></script>
     <script src="js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
 
-    <script>
-
-        var myButton = document.getElementById("gototop");
-        window.onscroll = function () { scrollFunction(); };
-        function scrollFunction() {
-            if (document.body.scrollTop > 30 || document.documentElement.scrollTop > 20) {
-                myButton.style.display = "block";
-            } else {
-                myButton.style.display = "none";
-            }
-        }
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-            myButton.style.transition = '3s';
-        }
-
-
-        document.addEventListener('scroll', () => {
-            const header = document.querySelector('.navbar'); // استخدم querySelector
-            if (window.scrollY > 0) {
-                header.classList.add('stickyTop');
-            } else {
-                header.classList.remove('stickyTop');
-            }
-        });
-    </script>
-
-    <script>
-        // قم بتعريف مصفوفة من النصوص والمتغيرات المرتبطة بها
-        var data = [
-            { text: 'Hello from Elzero Web School This is models cars one', variable: 'text', id: 'typeOne' },
-            { text: 'Hello from Elzero Web School This is models cars tow', variable: 'textOne', id: 'typeTow' },
-            { text: 'Hello from Elzero Web School This is models cars three', variable: 'textTow', id: 'typeThree' },
-            { text: 'Hello from Elzero Web School This is models cars four', variable: 'textThree', id: 'typeFour' },
-            { text: 'Hello from Elzero Web School This is models cars five', variable: 'textFour', id: 'typeFive' },
-            { text: 'Hello from Elzero Web School This is models cars sex', variable: 'textFive', id: 'typeSex' },
-            { text: 'Hello from Elzero Web School This is models cars seven', variable: 'textSex', id: 'typeEight' },
-        ];
-
-        // قم بتعريف دالة لتنفيذ الكتابة
-        function startTypewriter(button, text, variable, id) {
-            var buttonElement = document.getElementById(button);
-
-            buttonElement.onmouseover = function () {
-                'use strict';
-                var textIndex = 0;
-                var typeWriter = setInterval(function () {
-                    document.getElementById(id).textContent += text[textIndex];
-                    textIndex = textIndex + 1;
-
-                    if (textIndex > text.length - 1) {
-                        clearInterval(typeWriter);
-                        // إضافة تأخير قبل مسح النص
-                        setTimeout(function () {
-                            document.getElementById(id).textContent = ''; // مسح النص بعد انتهاء الكتابة
-                        }, 1000); // قم بتعيين الوقت الذي تريده هنا بالمللي ثانية
-                    }
-
-                }, 100);
-            };
-            function haltFunction() {
-                clearInterval(typeWriter);
-            }
-        }
-
-
-        // استدعاء الدالة لكل زر
-        startTypewriter('buttonOne', data[0].text, data[0].variable, data[0].id);
-        startTypewriter('buttonTow', data[1].text, data[1].variable, data[1].id);
-        startTypewriter('buttonThree', data[2].text, data[2].variable, data[2].id);
-        startTypewriter('buttonFour', data[3].text, data[3].variable, data[3].id);
-        startTypewriter('buttonFive', data[4].text, data[4].variable, data[4].id);
-        startTypewriter('buttonSex', data[5].text, data[5].variable, data[5].id);
-        startTypewriter('buttonEight', data[6].text, data[6].variable, data[6].id);
-    </script>
 
 </body>
 
