--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
     <!-- section CLIENTS -->
     <section class="CLIENTS">
-        <div class="displayCLIENTS">
+        <div class="displayCLIENTS pt-2">
 
             <div class="Client1-carry">
                 <h1 class="saysaboutus">Client says about us</h1>
@@ -382,7 +382,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person one</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -415,7 +415,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person tow</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -448,7 +448,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person three</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -481,7 +481,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person four</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -514,7 +514,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person five</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
