--- a/index after login.html
+++ b/index after login.html
@@ -421,7 +421,7 @@
 
     <!-- section CLIENTS -->
     <section class="CLIENTS">
-        <div class="displayCLIENTS">
+        <div class="displayCLIENTS pt-2">
 
             <div class="Client1-carry">
                 <h1 class="saysaboutus">Client says about us</h1>
@@ -456,7 +456,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person one</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -489,7 +489,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person two</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -522,7 +522,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person three</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -555,7 +555,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person four</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
@@ -588,7 +588,7 @@
                                 </li>
                             </ul>
 
-                            <h5 class=" mb-3">person</h5>
+                            <h5 class=" mb-3">person five</h5>
                             <p class=" mb-3">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
