--- a/index after login.html
+++ b/index after login.html
@@ -436,7 +436,7 @@
 
                         <i class="fa-regular fa-user slider-top "></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -469,7 +469,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color: #99dbf5;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -502,7 +502,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color: #000000;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -535,7 +535,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color: #8a2be2;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -568,7 +568,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color:gray;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
