--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
                         <i class="fa-regular fa-user slider-top "></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -395,7 +395,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color: #99dbf5;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -428,7 +428,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color: #000000;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -461,7 +461,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color: #8a2be2;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
@@ -494,7 +494,7 @@
 
                         <i class="fa-regular fa-user slider-top " style="color:gray;"></i>
 
-                        <div class="carousel-caption d-none d-md-block power-priveat">
+                        <div class="carousel-caption d-none d-md-block power-priveat  mt-3">
 
                             <ul class="clientstar mb-3">
                                 <li class="starclient">
