--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Sunday, September 3, 2023-2:47:08 PM -->
-<!DOCTYPE html data-backgrond>
+<!DOCTYPE html>
 <html lang="en-US" dir="rtl">
 
 <head>
@@ -23,16 +23,16 @@
 
 <body>
 
-    <div class="container-fluid" id="container-fluid" data>
+    <div class="container-fluid" id="container-fluid">
 
-        <ul class="navbar-nav me-auto flex-new">
+        <ul class="navbar-nav me-auto mb-2 flex-new">
 
             <div class=" navbar-collapse width" id="navbarSupported">
 
                 <li class="nav-item  width">
 
-                    <a href="#" class="nav-link dropdown-toggle hover-hovering" href="#" id="navbarDropdown"
-                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a href="#" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa-solid fa-lock" id="icon-lock"></i> Login</a>
 
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -44,8 +44,8 @@
 
                 <li class="nav-item  width">
 
-                    <a href="#" class="nav-link dropdown-toggle hover-hovering" href="#" id="navbarDropdown"
-                        role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a href="#" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fa-solid fa-circle-check" id="icon-check"></i>Register</a>
 
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -56,9 +56,9 @@
                 </li>
             </div>
 
-            <li class="d-flex d-lg d-flex justify-content-end" id="d-flex">
+            <form class="d-flex d-lg d-flex justify-content-end" id="d-flex">
                 <button class="btn  button-post" type="submit">+post</button>
-            </li>
+            </form>
 
             <li class="nav-item dropdown width-Click">
                 <button onclick="myFunction()">
@@ -82,7 +82,10 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
+
                 <i class="fa-solid fa-bars"></i>
+
+                <!-- <span class="navbar-toggler-icon"></span> -->
 
             </button>
 
@@ -91,7 +94,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle hover-hovering" href="?" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="?" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             home
                         </a>
@@ -105,7 +108,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle hover-hovering" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Cars </a>
 
@@ -124,7 +127,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle hover-hovering" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Our-Business
                         </a>
@@ -140,7 +143,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle hover-hovering" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             Profiles
                         </a>
@@ -153,7 +156,7 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle hover-hovering" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             More Pages
                         </a>
@@ -175,7 +178,7 @@
             <div class="whatsapp">
                 <div class="Whatsapp1">
                     <span class="whatsapp2">
-                        <i class="fa-brands fa-whatsapp fa-2xl" style="color: #a9a94e; "></i>
+                        <i class="fa-brands fa-whatsapp"></i>
                     </span>
                     <div id="what-sapp">
                         <p class="whatsapp3">Whatsapp now</p>
@@ -188,9 +191,9 @@
     </nav>
 
     <section class="section-image-top-position mt-3">
-        <!--carousel slider  -->
+<!--carousel slider  -->
         <div id="carouselExampleControlsNoTouching" class="carousel slide-fade" data-bs-touch="false"
-            data-bs-interval="false">
+        data-bs-interval="false">
             <div class="carousel-inner">
 
                 <div class="carousel-item active width-height-img-slider-top right">
@@ -216,8 +219,9 @@
 
                     </div>
 
-                    <div class="eltripLogo carousel-caption">
-                        <h1 class="h1yellowpriveat">El-Trip</h1>
+                    <div style="top: 60%;" class="eltripLogo carousel-caption">
+                        <h1 style="color: black; font-size: 50px; font-weight: bolder; 
+                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
                     </div>
 
                 </div>
@@ -245,8 +249,10 @@
 
                     </div>
 
-                    <div class="eltripLogo carousel-caption">
-                        <h1 class="h1yellowpriveat">El-Trip</h1>
+                    <div style="width: 20%; height: 60px;
+                    top: 17%; left: 50%; background-color: rgb(0 0 0 / 13%);" class="eltripLogo carousel-caption">
+                        <h1 style="color: black; font-size: 50px; font-weight: bolder; 
+                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
                     </div>
 
                 </div>
@@ -273,8 +279,9 @@
 
                     </div>
 
-                    <div class="eltripLogo carousel-caption">
-                        <h1 class="h1yellowpriveat">El-Trip</h1>
+                    <div style="top: 60%; width: 20%; height: 60px;" class="eltripLogo carousel-caption">
+                        <h1 style="color: #919090; background-color: rgb(0 0 0 / 60%); font-size: 50px; font-weight: bolder; 
+                        font-family: 'FontAwesome'; letter-spacing: 8px;" class="h1yellowpriveat">El-Trip</h1>
                     </div>
 
                 </div>
@@ -401,8 +408,7 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person one</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
-                                on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -431,8 +437,7 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person two</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
-                                on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -457,8 +462,7 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person three</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
-                                on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -491,8 +495,7 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person four</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
-                                on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -525,8 +528,7 @@
                             </ul>
 
                             <h5 class=" mb-3 text-white-50">person five</h5>
-                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time
-                                on the full
+                            <p class=" mb-3 text-white-50">person is very outgoing and peaceful. I had such a great time on the full
                                 ride with here.
                                 100% recommended!, especially when they are getting picked up.</p>
 
@@ -736,7 +738,7 @@
     <!-- section rides-register-daily /-->
 
     <!-- section Latest-rentals -->
-    <section class="Latest-rentals">
+    <section class="Latest-rentals mt-5">
         <div class="carlatest">
             <div class="lastercar1">
                 <h3 class="address">Latest rentals</h3>
@@ -852,7 +854,7 @@
     <!-- section Latest-rentals /-->
 
     <!-- section Looking-for-ride-->
-    <section class="Looking-for-ride ">
+    <section class="Looking-for-ride mb-5">
 
         <div class="space no-top">
 
@@ -1006,23 +1008,47 @@
     <!-- section Looking-for-ride -->
 
     <!-- section this-brand-car-web carousel slide-->
-    <div id="carouselExampleInterval" class="carousel slider-fade backgrond-slider" data-bs-ride="carousel">
+    <div id="carouselExampleInterval" class="carousel slider-fade" data-bs-ride="carousel">
 
-        <div class="carousel-inner height-slider">
+        <div class="carousel-indicators">
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
+
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6"
+                aria-label="Slide 7"></button>
+
+        </div>
+
+        <div class="carousel-inner">
             <!--  class="img-fluid clickForHover"-->
-            <div class="carousel-item active text-center" data-bs-interval="20000">
-
+            <div class="carousel-item active text-center" data-bs-interval="10000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeOne">El-Trip </h1>
+                    <h1 id="typeOne">Coding is </h1>
                     <img src="img/brand-1.jpeg" id="buttonOne" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
 
-            <div class="carousel-item text-center " data-bs-interval="10000">
+            <div class="carousel-item text-center " data-bs-interval="2000">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeTow"> El-Trip </h1>
+                    <h1 id="typeTow">Coding is </h1>
                     <img src="img/brand-2.png" id="buttonTow" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1030,7 +1056,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeThree"> El-Trip </h1>
+                    <h1 id="typeThree">Coding is </h1>
                     <img src="img/brand-3.jpeg" id="buttonThree" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1038,7 +1064,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFour"> El-Trip </h1>
+                    <h1 id="typeFour">Coding is </h1>
                     <img src="img/brand-5.jpeg" id="buttonFour" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1046,7 +1072,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeFive"> El-Trip </h1>
+                    <h1 id="typeFive">Coding is </h1>
                     <img src="img/brand-6.jpeg" id="buttonFive" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1054,7 +1080,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeSex"> El-Trip </h1>
+                    <h1 id="typeSex">Coding is </h1>
                     <img src="img/brand-7.jpeg" id="buttonSex" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1062,7 +1088,7 @@
             <div class="carousel-item text-center  ">
                 <a class="clickorstop" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    <h1 id="typeEight"> El-Trip </h1>
+                    <h1 id="typeEight">Coding is </h1>
                     <img src="img/brand-8.jpeg" id="buttonEight" alt="" class="img-fluid clickForHover">
                 </a>
             </div>
@@ -1085,7 +1111,7 @@
     <!-- section this-brand-car-web /-->
 
     <!-- ICONS-PLACEHOLDER -->
-    <section class="icons-placeholder ">
+    <section class="icons-placeholder mb-5">
 
         <div class="ICONS-PLACEHOLDER">
 
@@ -1095,7 +1121,7 @@
 
                     <div class="number-one">
                         <div class="img-icon-svg">
-                            <i class="fa-solid fa-location-dot" style="color: #040cf1; font-size: 60px;"></i>
+                            <img src="img/placeholder-pin-svgrepo-com.svg" alt="placeholder" class="icon1-img-svg">
                         </div>
 
                         <div class="Tucson-Canada">
@@ -1106,7 +1132,7 @@
 
                     <div class="number-one">
                         <div class="img-icon-svg">
-                            <i class="fa-solid fa-location-dot" style="color: #040cf1; font-size: 60px;"></i>
+                            <img src="img/placeholder-pin-svgrepo-com.svg" alt="placeholder" class="icon1-img-svg">
                         </div>
 
                         <div class="Tucson-Canada">
@@ -1117,7 +1143,7 @@
 
                     <div class="number-one">
                         <div class="img-icon-svg">
-                            <i class="fa-solid fa-location-dot" style="color: #040cf1; font-size: 60px;"></i>
+                            <img src="img/placeholder-pin-svgrepo-com.svg" alt="placeholder" class="icon1-img-svg">
                         </div>
 
                         <div class="Tucson-Canada">
@@ -1236,11 +1262,13 @@
     <!-- button go to top -->
     <button onclick="topFunction()" id="gototop"><i class="fa-solid fa-chevron-up"></i></button>
     <!-- button go to top /-->
-
+    
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
     <script src="js/java.js"></script>
-    <script src="js/all.min.js"></script>
+    
+    <!-- 
+    <script src="js/all.min.js"></script> -->
 
 </body>
 
